# BLonD-cpp

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated.js  appveyor.yml  clang-format  clang-format.cmake  classes.html  dir_000001_000002.html  dir_000003_000004.html  dir_000003_000010.html  dir_000003_000012.html  dir_000003_000014.html  dir_000004_000006.html  dir_000004_000008.html  dir_000004_000016.html  dir_000005_000002.html  dir_000006_000004.html  dir_000007_000002.html  dir_000008_000004.html  dir_000009_000002.html  dir_000011_000002.html  dir_000012_000004.html  dir_000012_000006.html  dir_000012_000010.html  dir_000013_000002.html  dir_000014_000004.html  dir_000014_000006.html  dir_000014_000008.html  dir_000014_000010.html  dir_000015_000002.html  dir_000016_000004.html  dir_000016_000006.html  dir_000016_000008.html  (+316 more)
Debug/: BLonD-minimal-cpp  analysis.txt  gmon.out  makefile  out  out2  sources.mk
Debug/beams/: Slices.d  subdir.mk
Debug/includes/: math_functions.d  subdir.mk
Debug/input_parameters/: RfParameters.d  subdir.mk
Debug/tests/: TC1_Acceleration.d  subdir.mk
Debug/trackers/: Tracker.d  subdir.mk
Release/: BLonD-minimal-cpp  makefile  out  sources.mk
Release/beams/: Beams.d  subdir.mk
Release/includes/: subdir.mk  utilities.d
Release/input_parameters/: GeneralParameters.d  RfParameters.d  subdir.mk
Release/tests/: subdir.mk
Release/trackers/: Tracker.d  subdir.mk
beams/: Beams.cpp  Beams.h  Distributions.h  Slices.cpp  Slices.h
benchmarks/: benchSyntheticSinus.cpp  benchTC1_Acceleration.cmake  benchTC1_Acceleration.cpp
benchmarks/prototypes/: TC1_CPU.h  TC1_OpenCL.h
benchmarks/reports/: 3d-hybrilit.json  3d-windows-i7.json  TC1.json  TC1_AzureD15.txt  TC1_hybri.json  benchSin.json  benchTC1.json  benchmark_browser.html  benchmarks_list.js  new_TC1_home.json  sin.json  sin_hybri.json  sin_old.json
d0/d00/: classblond_1_1TotalInducedVoltage__inherit__graph.map  classblond_1_1TotalInducedVoltage__inherit__graph.md5
d0/d02/: structmulti__t__coll__graph.map  structmulti__t__coll__graph.md5
d0/d09/: structoption_1_1PrintUsageImplementation_1_1SyscallWriter__coll__graph.md5
d0/d19/: classblond_1_1PSBPhaseNoiseInjection__inherit__graph.map  classblond_1_1PSBPhaseNoiseInjection__inherit__graph.md5
d0/d28/: classblond_1_1SPS__RL__inherit__graph.map  classblond_1_1SPS__RL__inherit__graph.md5
d0/d31/: plot__xy_8h.html  plot__xy_8h.js  plot__xy_8h_a7408df757331fca8669502312250285e_cgraph.map  plot__xy_8h_source.html
d0/d35/: Distributions_8cpp__incl.map  Distributions_8cpp__incl.md5
d0/d39/: classblond_1_1PhaseNoise-members.html
d0/d3d/: classblond_1_1optionparser_1_1PrintUsageImplementation_1_1LinePartIterator.html  classblond_1_1optionparser_1_1PrintUsageImplementation_1_1LinePartIterator.js  classblond_1_1optionparser_1_1PrintUsageImplementation_1_1LinePartIterator_a0dc4df4d0591dc08f10de09108468810_icgraph.map  classblond_1_1optionparser_1_1PrintUsageImplementation_1_1LinePartIterator_a0dc4df4d0591dc08f10de09108468810_icgraph.md5  classblond_1_1optionparser_1_1PrintUsageImplementation_1_1LinePartIterator_a0e51f40eed4bdc9998662d2b43bf1930_icgraph.map  classblond_1_1optionparser_1_1PrintUsageImplementation_1_1LinePartIterator_a0e51f40eed4bdc9998662d2b43bf1930_icgraph.md5  classblond_1_1optionparser_1_1PrintUsageImplementation_1_1LinePartIterator_a2ff26f6fedb3a76868dbd3c7e3d88b31_icgraph.map  classblond_1_1optionparser_1_1PrintUsageImplementation_1_1LinePartIterator_a2ff26f6fedb3a76868dbd3c7e3d88b31_icgraph.md5  (+24 more)
demos/: LHC_restart.cpp  TC1_Acceleration.cpp  TC5_Wake_impedance.cpp  TC5_Wake_impedance_frequency.cpp  TC5_Wake_impedance_time.cpp  TC8_Phase_Loop.cpp  TestDistribution.cpp  TestPlots.cpp  _LHC_acc.cpp
docs/: DocumentationTOC.md  cmakeCompilationOptions.md  compilation.md  optimisations.md  structure.md
impedances/: Ham.h  InducedVoltage.cpp  InducedVoltage.h  Intensity.cpp  Intensity.h
include/: configuration.h  constants.h  fft.h  globals.h  math_functions.h  optionparser.h  utilities.h
includes/: configuration.h  constants.h  globals.h  math_functions.cpp  math_functions.h  utilities.cpp  utilities.h
input_parameters/: GeneralParameters.cpp  GeneralParameters.h  RfParameters.cpp  RfParameters.h
llrf/: LHCFlatSpectrum.cpp  LHCFlatSpectrum.h  LHCNoiseFB.cpp  LHCNoiseFB.h  PhaseLoop.cpp  PhaseLoop.h  PhaseNoise.cpp  PhaseNoise.h
python/: distributions.py  plot_beams.py  plot_impedance.py  plot_llrf.py  plot_parameters.py  plot_slices.py  plot_xy.py  utilities.py
search/: all_5f.js  all_61.html  all_61.js  all_62.html  all_62.js  all_63.html  all_63.js  all_64.html  all_64.js  all_65.html  all_65.js  all_66.html  all_66.js  all_67.js  all_68.html  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.html  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.html  all_74.js  all_75.html  all_75.js  all_76.js  all_77.html  all_77.js  all_78.js  all_7a.js  all_7e.html  all_7e.js  classes_61.js  classes_62.html  (+182 more)
src/: globals.cpp
tests/: LHC_restart.cpp  TC1_Acceleration.cpp  TC5_Wake_impedance.cpp  TC5_Wake_impedance_frequency.cpp  TC5_Wake_impedance_time.cpp  TC8_Phase_Loop.cpp
trackers/: Tracker.cpp  Tracker.h  sin.h  vdtcore_common.h
unit-tests/: testBeam.cpp  testBigaussian.cpp  testDistributions.cpp  testFFT.cpp  testFail.cpp  testFullRing.cpp  testGP.cpp  testInducedVoltage.cpp  testInducedVoltageFreq.cpp  testInputTableIntensity.cpp  testLHCFlatSpectrum.cpp  testLHCNoiseFB.cpp  testLHC_Restart.cpp  testMonitors.cpp  testMyMath.cpp  testPL.cpp  testPLLHCF.cpp  testPLPSB.cpp  testPLSPS_RL.cpp  testPSBPhaseNoiseInjection.cpp  testPhaseNoise.cpp  testPlotBeams.cpp  testPlotImpedance.cpp  testPlotParameters.cpp  testPlotSlices.cpp  testPlotllrf.cpp  testRFP.cpp  testResonator.cpp  testSlices.cpp  testTC1_Acceleration.cpp  testTC5_Wake_impedance.cpp  testTracker.cpp  testTrackerUtilities.cpp
workspace/: CMakeLists.txt
workspace/main_files/: TC1_Acceleration.cpp
(+3659 files in other folders)
